[gd_scene load_steps=33 format=3 uid="uid://c3d6ixw7o8jrw"]

[ext_resource type="Script" path="res://scenes/surface/surface_exploration.gd" id="1_xlqem"]
[ext_resource type="Script" path="res://util/PlayerCharacterController.gd" id="3_e41ui"]
[ext_resource type="Script" path="res://util/SkyboxStars.gd" id="3_ewqvc"]
[ext_resource type="Script" path="res://util/SkytextureSetter.gd" id="4_qciod"]

[sub_resource type="Gradient" id="Gradient_pk5sq"]
offsets = PackedFloat32Array(0, 0.996748)
colors = PackedColorArray(0.71, 0.937167, 1, 1, 0.91, 0.982, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_gxfly"]
gradient = SubResource("Gradient_pk5sq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sw3f5"]
emission_shape_offset = Vector3(0, 100, 0)
emission_shape_scale = Vector3(150, 100, 150)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
angle_min = 1.07288e-05
angle_max = 1.07288e-05
direction = Vector3(0, -1, 0)
spread = 3.627
initial_velocity_min = 172.73
initial_velocity_max = 213.27
gravity = Vector3(0, 0, 0)
color_initial_ramp = SubResource("GradientTexture1D_gxfly")
hue_variation_min = -0.02
hue_variation_max = 0.02
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="Curve" id="Curve_tap58"]
max_value = 0.25
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.0311111, 0.0328701), 0.703501, 0.703501, 0, 0, Vector2(0.247407, 0.0867183), 0.0, 0.0, 0, 0, Vector2(1, 0.00160342), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ro7vs"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 1, 1, 0.643137)
use_particle_trails = true

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_71dsk"]
material = SubResource("StandardMaterial3D_ro7vs")
shape = 0
curve = SubResource("Curve_tap58")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2ga3q"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_71qnr"]
load_path = "res://.godot/imported/star_01.png-2dd44d962bf03e0b028a090023fd1976.s3tc.ctex"

[sub_resource type="Environment" id="Environment_5ku5r"]
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.2
ssr_enabled = true
ssr_max_steps = 256
ssr_fade_in = 0.000336533
ssr_fade_out = 2.73207

[sub_resource type="Gradient" id="Gradient_ckccf"]
offsets = PackedFloat32Array(0, 0.995246)
colors = PackedColorArray(1, 1, 1, 1, 0.39817, 0.39817, 0.39817, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_2onkk"]
frequency = 0.0046

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_yvtg6"]
width = 1024
height = 1024
seamless = true
color_ramp = SubResource("Gradient_ckccf")
noise = SubResource("FastNoiseLite_2onkk")

[sub_resource type="Gradient" id="Gradient_p52vl"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_brf5j"]
noise_type = 3
frequency = 0.0021

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_rmc7r"]
width = 1024
height = 1024
seamless = true
color_ramp = SubResource("Gradient_p52vl")
noise = SubResource("FastNoiseLite_brf5j")

[sub_resource type="Gradient" id="Gradient_c6vgc"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_nsfbl"]
noise_type = 3
frequency = 0.0044
fractal_octaves = 4
cellular_distance_function = 1
domain_warp_type = 2
metadata/_preview_in_3d_space_ = true

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_we75y"]
width = 1024
height = 1024
seamless = true
as_normal_map = true
bump_strength = 2.9
color_ramp = SubResource("Gradient_c6vgc")
noise = SubResource("FastNoiseLite_nsfbl")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qd0e8"]
cull_mode = 2
metallic = 0.88
metallic_specular = 1.0
roughness = 0.07
normal_enabled = true
normal_texture = SubResource("NoiseTexture2D_we75y")
rim_enabled = true
clearcoat_roughness = 1.0
detail_mask = SubResource("NoiseTexture2D_rmc7r")
detail_blend_mode = 3
detail_albedo = SubResource("NoiseTexture2D_yvtg6")
uv1_scale = Vector3(64, 64, 64)
disable_receive_shadows = true

[sub_resource type="PlaneMesh" id="PlaneMesh_l8v2s"]
material = SubResource("StandardMaterial3D_qd0e8")
size = Vector2(6553, 6553)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_mesfj"]
plane = Plane(0, 0, -10, -326)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_ofv43"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_gvp60"]
friction = 10.0
rough = true
bounce = 0.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mnsci"]
radius = 3.0
height = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_07xn3"]
transparency = 1
cull_mode = 2
albedo_color = Color(0.710448, 0.871801, 1, 1)
metallic = 1.0
metallic_specular = 1.0
roughness = 0.08
emission_enabled = true
emission = Color(0.0196078, 0.0196078, 0.0196078, 1)
refraction_scale = -0.48

[sub_resource type="SphereMesh" id="SphereMesh_22pyw"]
radius = 5.0
height = 10.0
radial_segments = 16
rings = 6

[sub_resource type="Gradient" id="Gradient_8oe5l"]
offsets = PackedFloat32Array(0, 0.25, 0.5, 0.75, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 0.517647, 1, 1, 1, 1, 1, 1, 1, 0.517647, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vy4mi"]
gradient = SubResource("Gradient_8oe5l")
width = 256
height = 256
repeat = 1

[node name="SurfaceExploration" type="Node3D"]
script = ExtResource("1_xlqem")

[node name="PlayerCharacterController" type="CharacterBody3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
wall_min_slide_angle = 0.0261799
floor_stop_on_slope = false
floor_max_angle = 1.7017
script = ExtResource("3_e41ui")

[node name="Rain" type="GPUParticles3D" parent="PlayerCharacterController"]
unique_name_in_owner = true
amount = 10000
trail_enabled = true
trail_lifetime = 0.03
process_material = SubResource("ParticleProcessMaterial_sw3f5")
draw_pass_1 = SubResource("RibbonTrailMesh_71dsk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerCharacterController"]
shape = SubResource("CapsuleShape3D_2ga3q")

[node name="camera" type="Camera3D" parent="PlayerCharacterController/CollisionShape3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
v_offset = 0.8
far = 25000.0

[node name="SkyboxStars" type="Node3D" parent="PlayerCharacterController" node_paths=PackedStringArray("baseSprite")]
script = ExtResource("3_ewqvc")
baseSprite = NodePath("Star")
distanceMultiplier = 80.0
counterRotateCamera = true

[node name="Star" type="Sprite3D" parent="PlayerCharacterController/SkyboxStars"]
visibility_range_begin = 20.0
pixel_size = 0.7
billboard = 1
texture = SubResource("CompressedTexture2D_71qnr")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.0618909, -0.292652, 0.954214, 0.60838, 0.746843, 0.268513, -0.791229, 0.597143, 0.131821, 0, 0, 0)
sky_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5ku5r")

[node name="ScatteringContainer" type="Node3D" parent="."]
unique_name_in_owner = true
editor_description = "Set the metadata flag 'enabled' to on to generate surface scattering via GDExtension. Set the 'generate single mesh' flag to 'on' to generate only a single mesh, instead of one mesh per object.

Note that surface scattering using individual nodes is *much* slower at render-time than having it all baked into a single mesh, so this isn't really recommended!"
metadata/enabled = true
metadata/generateSingleMesh = true

[node name="SurfaceContainer" type="Node3D" parent="."]
unique_name_in_owner = true
editor_description = "Surface mesh generation - via GDExtension"
metadata/enabled = true

[node name="Water" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
mesh = SubResource("PlaneMesh_l8v2s")

[node name="Boundaries" type="Node3D" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="Boundaries"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boundaries/StaticBody3D"]
shape = SubResource("WorldBoundaryShape3D_mesfj")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Boundaries/StaticBody3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_mesfj")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Boundaries/StaticBody3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_mesfj")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Boundaries/StaticBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_mesfj")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="Boundaries/StaticBody3D"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_ofv43")

[node name="CupolaRigidBody" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 9999, 0.5)
collision_layer = 2
collision_mask = 4294967295
input_ray_pickable = false
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
mass = 1000.0
physics_material_override = SubResource("PhysicsMaterial_gvp60")
continuous_cd = true

[node name="CupolaCollisionShape3D" type="CollisionShape3D" parent="CupolaRigidBody"]
shape = SubResource("CapsuleShape3D_mnsci")

[node name="CupolaMesh" type="MeshInstance3D" parent="CupolaRigidBody/CupolaCollisionShape3D"]
material_override = SubResource("StandardMaterial3D_07xn3")
transparency = 0.3
mesh = SubResource("SphereMesh_22pyw")
skeleton = NodePath("../..")

[node name="BeaconLight" type="Sprite3D" parent="CupolaRigidBody"]
transform = Transform3D(2, 0, 0, 0, 2000, 0, 0, 0, 1, 0, 4.7, 0)
centered = false
offset = Vector2(-128, 0)
billboard = 2
texture = SubResource("GradientTexture2D_vy4mi")

[node name="SkytextureSetter" type="Node" parent="." node_paths=PackedStringArray("worldenvironment")]
script = ExtResource("4_qciod")
worldenvironment = NodePath("../WorldEnvironment")
